# Wayfarer

./: .ai_session.md  .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  plan.md  run.bat  stop.bat  typescript-language-server.cmd  部署.md
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_core_tables.py  0002_optional_postgis_geom.py  0003_user_admin_and_optional_email.py
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  auth.py  deps.py  export.py  health.py  life_events.py  router.py  stats_steps.py  tracks.py  users.py
backend/app/core/: errors.py  security.py  settings.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  export_job.py  life_event.py  refresh_token.py  track_edit.py  track_point.py  user.py  weather_cache.py
backend/app/services/: life_event.py  weather.py
backend/app/tasks/: __init__.py  anti_cheat.py  celery_app.py  export.py  life_event.py
backend/app/utils/: __init__.py  geohash.py
backend/scripts/: check_alembic_version_len.py  fix_alembic_version_len.py
backend/tests/: conftest.py  test_admin_users.py  test_anti_cheat.py  test_auth.py  test_export_create.py  test_export_download.py  test_life_event_stay_detection.py  test_life_events_idempotent.py  test_life_events_list_pagination.py  test_stats_steps.py  test_tracks_batch.py  test_tracks_edits_create.py  test_tracks_edits_delete.py  test_tracks_edits_list.py  test_tracks_query.py  test_weather_enrichment.py
(+150 files in other folders)
