[project]
name = "wayfarer-backend"
version = "0.0.1"
description = "Wayfarer backend API (FastAPI)."
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "argon2-cffi>=23.1.0",
    "fastapi>=0.128.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.0",
    "PyJWT>=2.8.0",
    "pytest>=8.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn>=0.40.0",
    "celery>=5.6.2",
]
